Bug 171890 - Amarok crashes if tries to play a podcast
Summary: Amarok crashes if tries to play a podcast
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 170798 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-30 09:46 UTC by Ladislav Nesnera
Modified: 2008-09-30 10:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ladislav Nesnera 2008-09-30 09:46:37 UTC
Version:           1.90 (using 4.1.2 (KDE 4.1.1 (KDE 4.1 >= 20080828)) "release 52.3", KDE:KDE4:Factory:Desktop / openSUSE_Factory)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.25.16-0.1-default

It happened if I tried to play the podcast http://www2.rozhlas.cz/podcast/podcast_porady.php?p_po=2623

BackTrace:
Application: Amarok (amarok), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[New Thread 0x7f487b407700 (LWP 9802)]
[New Thread 0x418ae950 (LWP 9823)]
[New Thread 0x43da3950 (LWP 9822)]
[New Thread 0x435a2950 (LWP 9821)]
[New Thread 0x42da1950 (LWP 9820)]
[New Thread 0x425a0950 (LWP 9808)]
[New Thread 0x408ac950 (LWP 9807)]
[New Thread 0x410ad950 (LWP 9806)]
[KCrash handler]
#5  0x00007f48625d4c0c in CurrentEngine::update (this=0xae54c0)
    at /usr/src/debug/amarok-1.90/src/context/engines/current/CurrentEngine.cpp:170
#6  0x00007f48625d73c1 in CurrentEngine::message (this=0xae54c0, 
    state=<value optimized out>)
    at /usr/src/debug/amarok-1.90/src/context/engines/current/CurrentEngine.cpp:89
#7  0x00007f487ad17dd9 in ContextSubject::messageNotify (
    this=<value optimized out>, message=@0x7fff8345b054)
    at /usr/src/debug/amarok-1.90/src/context/ContextObserver.cpp:58
#8  0x00007f487ad18e8e in Context::ContextView::engineStateChanged (
    this=<value optimized out>, state=<value optimized out>, 
    oldState=2202381584)
    at /usr/src/debug/amarok-1.90/src/context/ContextView.cpp:226
#9  0x00007f487aec997b in EngineSubject::stateChangedNotify (this=0x71be80, 
    newState=Phonon::PlayingState, oldState=Phonon::LoadingState)
    at /usr/src/debug/amarok-1.90/src/EngineObserver.cpp:109
#10 0x00007f487aec4549 in EngineController::slotStateChanged (this=0x71be70, 
    newState=Phonon::PlayingState, oldState=Phonon::LoadingState)
    at /usr/src/debug/amarok-1.90/src/EngineController.cpp:622
#11 0x00007f487aec8901 in EngineController::qt_metacall (this=0x71be70, 
    _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
    _a=0x7fff8345b2c0)
    at /usr/src/debug/amarok-1.90/build/src/EngineController.moc:154
#12 0x00007f4876094274 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#13 0x00007f4879d7decc in Phonon::MediaObject::stateChanged ()
   from /usr/lib64/libphonon.so.4
#14 0x00007f4879d7f25b in Phonon::MediaObjectPrivate::_k_stateChanged ()
   from /usr/lib64/libphonon.so.4
#15 0x00007f4879d7f6ba in Phonon::MediaObject::qt_metacall ()
   from /usr/lib64/libphonon.so.4
#16 0x00007f4876094274 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#17 0x00007f4869f10aaf in ?? ()
   from /usr/lib64/kde4/plugins/phonon_backend/phonon_gstreamer.so
#18 0x00007f4869f10d21 in ?? ()
   from /usr/lib64/kde4/plugins/phonon_backend/phonon_gstreamer.so
#19 0x00007f4869f153f4 in ?? ()
   from /usr/lib64/kde4/plugins/phonon_backend/phonon_gstreamer.so
#20 0x00007f4869f09ea9 in ?? ()
   from /usr/lib64/kde4/plugins/phonon_backend/phonon_gstreamer.so
#21 0x00007f487608ef3d in QObject::event () from /usr/lib64/libQtCore.so.4
#22 0x00007f4872ef317d in QApplicationPrivate::notify_helper ()
   from /usr/lib64/libQtGui.so.4
#23 0x00007f4872efaf2a in QApplication::notify () from /usr/lib64/libQtGui.so.4
#24 0x00007f487a61177b in KApplication::notify () from /usr/lib64/libkdeui.so.5
#25 0x00007f487607fe71 in QCoreApplication::notifyInternal ()
   from /usr/lib64/libQtCore.so.4
#26 0x00007f4876080b2a in QCoreApplicationPrivate::sendPostedEvents ()
   from /usr/lib64/libQtCore.so.4
#27 0x00007f48760a8713 in ?? () from /usr/lib64/libQtCore.so.4
#28 0x00007f486fb3993a in g_main_context_dispatch ()
   from /usr/lib64/libglib-2.0.so.0
#29 0x00007f486fb3d040 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f486fb3d1dc in g_main_context_iteration ()
   from /usr/lib64/libglib-2.0.so.0
#31 0x00007f48760a839f in QEventDispatcherGlib::processEvents ()
   from /usr/lib64/libQtCore.so.4
#32 0x00007f4872f83ccf in ?? () from /usr/lib64/libQtGui.so.4
#33 0x00007f487607e772 in QEventLoop::processEvents ()
   from /usr/lib64/libQtCore.so.4
#34 0x00007f487607e8fd in QEventLoop::exec () from /usr/lib64/libQtCore.so.4
#35 0x00007f4876080ded in QCoreApplication::exec ()
   from /usr/lib64/libQtCore.so.4
#36 0x00000000004042a2 in main (argc=1, argv=0x7fff8345d288)
    at /usr/src/debug/amarok-1.90/src/main.cpp:127
#0  0x00007f4870273261 in nanosleep () from /lib64/libc.so.6
Comment 1 Mark Kretschmann 2008-09-30 10:17:02 UTC
Ok, I could reproduce this with SVN trunk, and got a good backtrace too:

Thread 1 (Thread 0x7f65b38947c0 (LWP 23072)):
[KCrash Handler]
#4  0x00007f65c0ca5095 in raise () from /lib/libc.so.6
#5  0x00007f65c0ca6af0 in abort () from /lib/libc.so.6
#6  0x00007f65c244e055 in qt_message_output () from /usr/lib/libQtCore.so.4
#7  0x00007f65c244e19d in qFatal () from /usr/lib/libQtCore.so.4
#8  0x00007f65a659719e in KSharedPtr<Meta::Artist>::operator-> (this=0x7fffcacb4e00) at /home/mark/kde/include/ksharedptr.h:116
#9  0x00007f65a659596f in LyricsEngine::update (this=0xbb8cd0) at /home/mark/kde/src/amarok/src/context/engines/lyrics/LyricsEngine.cpp:79
#10 0x00007f65a6596034 in LyricsEngine::message (this=0xbb8cd0, state=@0x7fffcacb4f7c) at /home/mark/kde/src/amarok/src/context/engines/lyrics/LyricsEngine.cpp:60
#11 0x00007f65c186b5a7 in ContextSubject::messageNotify (this=0xbfb818, message=@0x7fffcacb4f7c) at /home/mark/kde/src/amarok/src/context/ContextObserver.cpp:63
#12 0x00007f65c186faf6 in Context::ContextView::engineStateChanged (this=0xbfb7e0, state=Phonon::PlayingState, oldState=Phonon::BufferingState)
    at /home/mark/kde/src/amarok/src/context/ContextView.cpp:231
#13 0x00007f65c199a239 in EngineSubject::stateChangedNotify (this=0x737be0, newState=Phonon::PlayingState, oldState=Phonon::BufferingState) at /home/mark/kde/src/amarok/src/EngineObserver.cpp:109
#14 0x00007f65c1995b86 in EngineController::slotStateChanged (this=0x737bd0, newState=Phonon::PlayingState, oldState=Phonon::BufferingState) at /home/mark/kde/src/amarok/src/EngineController.cpp:640
#15 0x00007f65c19971ee in EngineController::qt_metacall (this=0x737bd0, _c=QMetaObject::InvokeMetaMethod, _id=28, _a=0x7fffcacb5180) at /home/mark/kde/build/amarok/src/EngineController.moc:154
#16 0x00007f65c254b8b6 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0x00007f65bbef80b9 in Phonon::MediaObject::stateChanged (this=0x738270, _t1=Phonon::PlayingState, _t2=Phonon::BufferingState)
    at /home/mark/kde/build/kdesupport/phonon/phonon/moc_mediaobject.cpp:177

Comment 2 Mark Kretschmann 2008-09-30 10:17:47 UTC
*** Bug 170798 has been marked as a duplicate of this bug. ***
Comment 3 Mark Kretschmann 2008-09-30 10:42:07 UTC
Fixed with commit r866155