Fix crash when playing certain podcasts without Artist tag.

BUG: 171890

svn path=/trunk/extragear/multimedia/amarok/; revision=866155